[gd_scene load_steps=20 format=2]

[ext_resource path="res://Level/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://Level/Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Health.png" type="Texture" id=5]
[ext_resource path="res://Level/Game_over.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level/Stars.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level/cloud.gd" type="Script" id=8]
[ext_resource path="res://assets/Cloud_2.png" type="Texture" id=9]
[ext_resource path="res://assets/Cloud_3.png" type="Texture" id=10]
[ext_resource path="res://assets/Cloud.png" type="Texture" id=11]
[ext_resource path="res://sfx/night-ambience.mp3" type="AudioStream" id=12]
[ext_resource path="res://sfx/day-ambience.mp3" type="AudioStream" id=13]
[ext_resource path="res://music/chill-ambient-11322.mp3" type="AudioStream" id=14]
[ext_resource path="res://music/deep-ambient-11051.mp3" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 500 )

[sub_resource type="Animation" id=2]
resource_name = "Day_and_Night_Cycle"
length = 240.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40, 80, 122, 190, 240 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.815686, 0.611765, 0.227451, 1 ), Color( 0, 0.129412, 0.345098, 1 ), Color( 0, 0.129412, 0.345098, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Stars:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 94, 120, 190, 220 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud/ParallaxBackground/CanvasModulate:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 40, 80, 122, 190, 240 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.815686, 0.611765, 0.227451, 1 ), Color( 0.156863, 0.156863, 0.27451, 1 ), Color( 0.156863, 0.156863, 0.27451, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Night_Ambience:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 91, 115, 147, 205, 223, 240 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -10.0, 2.0, 2.0, -11.807, -80.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Day_Ambience:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 99, 115, 137, 199, 230 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -10.0, -80.0, -80.0, -2.967 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Day_Music:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 78, 97, 131 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -2.0, -2.0, -10.0, -80.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Night_Music:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 98, 107, 127, 205 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -20.368, -2.0, -2.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Day_Music:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 176, 239 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Night_Music:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 97, 240 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Night_Music:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.2

[node name="Game" type="Node2D"]
scale = Vector2( 1.00466, 1.03789 )
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 0, -1.8189 )
z_index = 4096
color = Color( 0.94, 0.947765, 0.960706, 1 )

[node name="Stars" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )

[node name="Cloud" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Cloud"]

[node name="CanvasModulate" type="CanvasModulate" parent="Cloud/ParallaxBackground"]
color = Color( 0.949412, 0.949412, 0.956471, 1 )

[node name="Sprite" type="Sprite" parent="Cloud/ParallaxBackground"]
position = Vector2( 640, 320 )
scale = Vector2( 1.00466, 1.03789 )
texture = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud/ParallaxBackground"]
motion_mirroring = Vector2( 3737, 0 )
script = ExtResource( 8 )

[node name="Cloud" type="Sprite" parent="Cloud/ParallaxBackground/ParallaxLayer"]
position = Vector2( 418.548, -88.2563 )
scale = Vector2( 0.499932, 0.499933 )
texture = ExtResource( 11 )

[node name="Cloud_2" type="Sprite" parent="Cloud/ParallaxBackground/ParallaxLayer"]
position = Vector2( 2251.36, 438.394 )
scale = Vector2( 0.541586, 0.541586 )
texture = ExtResource( 9 )

[node name="Cloud_3" type="Sprite" parent="Cloud/ParallaxBackground/ParallaxLayer"]
position = Vector2( 616.691, 771.486 )
scale = Vector2( 0.713222, 0.713222 )
texture = ExtResource( 10 )

[node name="Spawn_Burung_Area1" type="ReferenceRect" parent="."]
margin_left = 1348.03
margin_top = 56.7252
margin_right = 1395.03
margin_bottom = 592.725
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn_Burung_Area2" type="ReferenceRect" parent="."]
margin_left = -84.2932
margin_top = 54.0
margin_right = -37.2928
margin_bottom = 590.0

[node name="SpawnTimer_Sakit" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnTimer_Sehat" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Target" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -335.097, 373.889 )

[node name="Burung_Hilang1" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 152.291, 0 )
shape = SubResource( 1 )

[node name="Burung_Hilang2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1855.67, -12.5986 )
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HP_Bar" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 300.0
margin_right = 52.0
margin_bottom = 332.0
rect_min_size = Vector2( 104, 0 )
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health1" type="TextureRect" parent="UI/HP_Bar"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health2" type="TextureRect" parent="UI/HP_Bar"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health3" type="TextureRect" parent="UI/HP_Bar"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 100.205
margin_top = 32.5864
margin_right = 292.205
margin_bottom = 89.5864
custom_colors/font_color = Color( 0, 0.215686, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "SCORE  : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Over" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="Spawn_HPUp_Item" type="ReferenceRect" parent="."]
margin_left = 109.264
margin_top = 90.8903
margin_right = 1227.26
margin_bottom = 595.89
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnHPUp_Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Burung_Speed_Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Day_and_Night_Cycle_Animation" type="AnimationPlayer" parent="."]
anims/Day_and_Night_Cycle = SubResource( 2 )
anims/RESET = SubResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="TimerLevel" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="Day_Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -0.8901
autoplay = true

[node name="Night_Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -67.9659
autoplay = true

[node name="Day_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -4.14679
autoplay = true

[node name="Night_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.7669
autoplay = true

[connection signal="timeout" from="SpawnTimer_Sakit" to="." method="_on_SpawnTimer_Sakit_timeout"]
[connection signal="timeout" from="SpawnTimer_Sehat" to="." method="_on_SpawnTimer_Sehat_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="SpawnHPUp_Timer" to="." method="_on_SpawnHPUp_Timer_timeout"]
[connection signal="timeout" from="Burung_Speed_Timer" to="." method="_on_Burung_Speed_Timer_timeout"]
[connection signal="timeout" from="TimerLevel" to="." method="_on_TimerLevel_timeout"]
